--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     text-decoration: none;
 }
 body{
-    background-color: rgb(226, 223, 223);
+    background-color: rgb(255, 255, 255);
     font-family: sans-serif;
     /* width: 100vw; */
     box-sizing: border-box;
@@ -14,11 +14,13 @@ body{
 /* Navigation bar */
 .nav_bar{
     background-color: #fff;
-    /* width: 100vw; */
+    width: 100vw;
+    position: fixed;
     padding: 20px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: #000 1px solid;
 }
 .nav_bar ul{
     display: flex;
@@ -27,7 +29,10 @@ body{
 .nav_bar ul li a{
         color: #000;
 }
-.hero_section{
+.hero{
+    margin-top: 40px;
+    padding: 60px;
+    color: #fff;
     background: url(../img/nike-2.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -35,9 +40,27 @@ body{
     height: 90vh;
     /* width: 100%; */
 }
+.hero h1{
+    font-size: 33px;
+    width: 50%;
+    line-height: 50px;
+}
+.hero-end{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+    padding-top: 260px;
+    text-align: center;
+}
+.hero-end p{
+    padding-bottom: 20px;
+    font-size: 30px;
+}
+
 
 /* Features section */
-.features_section{
+.features-section{
     margin: 20px 0;
     width: 100%;
     text-align: center;
@@ -48,16 +71,19 @@ body{
     justify-content: center;
     gap: 30px;
 }
-.features-text h1{
-    padding-bottom: 40px;
+.features-section h1{
+    padding-bottom: 30px;
 }
 .features-text h2{
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+}
+.features-main-text{
+    padding-bottom: 30px;
+    padding-top: 80px;
 }
 .features-text{
     align-items: center;
     display: flex;
-    justify-content: center;
     color: #fff;
 }
 .features-flex{
@@ -65,22 +91,22 @@ body{
     flex-direction: column;
      align-items: center;
      text-align: center;
-     position: relative;
+     /* position: relative; */
 }
 .features-flex .btns{
     display: flex;
-    justify-content: end;
-    position: absolute;
-    bottom: 40px;
+    margin-top: 200px;
     gap: 10px;
-
 }
-button{
+
+.btns > button{
+    /* margin-top: 50vh; */
     padding: 10px 50px;
     border: 1px transparent;
     cursor: pointer;   
     transition: 0.2s ease-in-out;
 }
+
 button:hover{
   color: #fff;
   background-color: #000000d8;  
@@ -95,7 +121,7 @@ button:hover{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 600px;
+    height: 550px;
     width: 8000px;
 }
 .b{
@@ -103,7 +129,7 @@ button:hover{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 600px;
+    height: 550px;
     width: 8000px;
 }
 .c{
@@ -111,7 +137,7 @@ button:hover{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 600px;
+    height: 550px;
     width: 8000px;
 }
 
@@ -143,43 +169,86 @@ button:hover{
 .grid-section{
     margin: 20px 0;
 }
-/* .d{
+ .grid{
+    margin: 2.3rem;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: 300px 300px;
+    gap: 1em;
+    grid-template-areas: "box1 box1 box1 box2 box3"
+     "box1 box1 box1 box4 box5";
+ }
+ .grid-text{
+    font-size: 13px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    margin-bottom: 2px;
+ }
+ .grid-text h4{
+    font-size: bold;
+    font-size: 15px;
+ }
+ .grid-class{
+    align-items: center;
+    text-align: center;
+ }
+ .grid-class-ish{
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: start;
+    padding: 50px 50px;
+ }
+ .grid-text-ish{
+    padding-bottom: 30px;
+ }
+ .grid-text-ish h1{
+    font-size: 30px;
+    padding-bottom: 10px;
+ }
+ .grid-class img{
+    margin-bottom: 90px 0;
+    height: 260px;
+ }
+ .grid button{
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 0.3px;
+    padding: 12px 17px;
+ }
+.d{
     background-image: url(../img/img-5.avif);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 600px;
+    height: 615px;
+    grid-area: box1;
 }
 .e{
-    background-image: url(../img/img-6.avif);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 600px;
+    height: 300px;
+    width: 300px;
+    background-color: #e9e9e975;
+    grid-area: box2;
 }
 .f{
-    background-image: url(../img/img-7.avif);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 600px;
+    height: 300px;
+    width: 300px;
+    background-color: #e9e9e975;
+    grid-area: box3;
 }
 .g{
-    background-image: url(../img/img-8.avif);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 600px;
+    height: 300px;
+    width: 300px;
+    background-color: #e9e9e975;
+    grid-area: box4;
 }
 .h{
-    background-image: url(../img/img-9.avif);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 600px;
-} */
- .grid{
-    margin: 2.5rem;
-    display: grid;
-    grid-template-columns: repeat(2fr, 4);
- }
+    height: 300px;
+    width: 300px;
+    background-color: #e9e9e975;
+    grid-area: box5;
+}
+
