--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,12 @@
     list-style: none;
     text-decoration: none;
 }
+
+:root {
+    --transition: .5s all ;
+    --shadow: 7px 0 7px 0 #2c2c2c8c;
+}
+
 body{
     background-color: rgb(255, 255, 255);
     font-family: sans-serif;
@@ -226,29 +232,124 @@ button:hover{
     background-size: cover;
     height: 615px;
     grid-area: box1;
+    cursor: pointer;
 }
+
+
 .e{
     height: 300px;
     width: 300px;
     background-color: #e9e9e975;
     grid-area: box2;
+    cursor: pointer;
+    transition: var(--transition);
+}
+.e:hover {
+    box-shadow: var(--shadow);
 }
 .f{
     height: 300px;
     width: 300px;
     background-color: #e9e9e975;
     grid-area: box3;
+    cursor: pointer;
+    transition: var(--transition);
 }
+.f:hover {
+    box-shadow: var(--shadow);
+}
+
 .g{
     height: 300px;
     width: 300px;
     background-color: #e9e9e975;
     grid-area: box4;
+    cursor: pointer;
+    transition: var(--transition);
+}
+.g:hover {
+    box-shadow: var(--shadow);
 }
 .h{
     height: 300px;
     width: 300px;
     background-color: #e9e9e975;
     grid-area: box5;
+    cursor: pointer;
+    transition: var(--transition);
+}
+.h:hover {
+    box-shadow: var(--shadow);
 }
 
+
+.grid-item {
+    border: 1px solid #eee;
+    padding: 10px;
+    text-align: center;
+    position: relative; 
+    overflow: hidden; 
+}
+
+
+.grid-image-container {
+    position: relative;  
+    overflow: hidden;  
+    width: 100%;  
+    height: 200px;  
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 4/3;
+}
+
+.grid-image-container img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.overlay-content {
+    text-align: center;
+}
+
+.overlay-content .view-product-button {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.overlay-content .view-product-button:hover {
+    background-color: #0056b3;
+}
+
+
+.grid-image-container:hover .overlay {
+    opacity: 1;
+    visibility: visible;
+}
+
+.grid-item:hover .overlay {
+    opacity: 1;
+    visibility: visible;
+}
