--- a/css/home.css
+++ b/css/home.css
@@ -213,13 +213,16 @@ button:hover{
  }
  .grid-class img{
     margin-bottom: 90px 0;
-    height: 260px;
+    height: 220px;
  }
  .grid button{
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 0.3px;
     padding: 12px 17px;
+ }
+ .grid-text{
+    margin-bottom: 90px;
  }
 .d{
     background-image: url(../img/img-5.avif);
@@ -253,6 +256,8 @@ button:hover{
     background-color: #e9e9e975;
     grid-area: box5;
 }
+
+/* email section */
 .email-section{
     height: 50vh;
     margin: 70px 0;
@@ -331,8 +336,21 @@ input::placeholder{
     width: 400px;
     background-color: #e9e9e975;
 }
+.more-class button,
+.grid-class button{
+    background-color: grey;
+    color: white;
+    transition: 0.6s;
+}
+.more-class button:hover,
+.grid-class button:hover{
+    background-color: rgb(170, 170, 170);
+    color: white;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+}
 
 /* More section */
+
 .final-section{
     margin: 40px 0;
     padding: 70px 20px;
@@ -341,7 +359,7 @@ input::placeholder{
 /* More section */
 .final{
     /* padding: 20px 15px; */
-    color: #C;
+    color: ;
 }
 .final h1{
     font-size: 35px;
@@ -401,4 +419,8 @@ footer{
 }
 .footer-end i{
     padding: 10px;
+}
+.footer-lastline{
+    text-align: center;
+    margin-top: 120px;
 }
