--- a/css/home.css
+++ b/css/home.css
@@ -535,6 +535,7 @@ footer{
     width: 100%;
     height: 100%;
     padding: 1.5%;
+    overflow: auto;
     
 
 }
@@ -570,4 +571,41 @@ footer{
   display: flex;
     flex-direction: column;
     justify-content: space-evenly;   
+}
+
+.group {
+    display: flex;
+    flex-direction: column;
+}
+
+.delete-btn {
+    background: red;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.count-section {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-around;
+    align-items: center;
+    width: 10vw;
+    height: 5vh;
+    font-size: 20px;
+    margin-left: -12%;
+
+}
+
+.add-btn,
+.subtract-btn {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background: #000;
+    color: #fff;
+    font-size: 20px;
+    padding: 0 0 0 0;
 }
