--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,7 @@ body{
 .nav_bar{
     background-color: #fff;
     width: 100vw;
+    font-size: 18px;
     position: fixed;
     padding: 20px 20px;
     display: flex;
@@ -30,6 +31,10 @@ body{
 }
 .nav_bar ul li a{
         color: #000;
+        /* transition: 0.3s; */
+}
+.nav_bar ul li a:hover{
+       border-bottom: 2px solid red;
 }
 .hero{
     margin-top: 40px;
@@ -424,4 +429,39 @@ footer{
 .footer-lastline{
     text-align: center;
     margin-top: 120px;
+}
+
+
+
+.dropdown-container{
+    position: relative;
+    display: inline-block;
+}
+.dropdown-container:hover .dropdown{
+    display: flex;
+    flex-direction: column;
+    height: 60vh;
+    width: 100vw;
+}
+.dropdown-container:hover .dropdown-main{
+    background-color: #f1f1f1;
+    height: 60vh;
+}
+.dropdown{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+    z-index: 2;
+}
+.dropdown-main{
+
+}
+.dropdown p{
+    color: #000;
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+    z-index: 4;
 }
